--- a/applier/pom.xml
+++ b/applier/pom.xml
@@ -17,6 +17,7 @@
    <properties>
       <encoding>UTF-8</encoding>
       <java.version>1.8</java.version>
+      <kotlin.version>1.0.0-rc-1036</kotlin.version>
       <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
       <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
       <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -24,6 +25,11 @@
    </properties>
 
    <dependencies>
+       <dependency>
+           <groupId>org.jetbrains.kotlin</groupId>
+           <artifactId>kotlin-stdlib</artifactId>
+           <version>${kotlin.version}</version>
+       </dependency>
        <dependency>
            <groupId>fr.vidal.oss</groupId>
            <artifactId>handy-warup-generator</artifactId>
@@ -45,7 +51,27 @@
    </dependencies>
 
     <build>
+        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <plugins>
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test-compile</id>
+                        <goals>
+                            <goal>test-compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
